--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,8 @@
   <div class="wrap">
     <div class="logo"></div>
     <div class="canvas-wrap">
-      <h3>Loading...</h3>
+      <canvas id="game" width="600" height="600"></canvas>
+
       <div class="border">
         <div class="top-left"></div>
         <div class="top"></div>
