--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <div class="wrap">
     <div class="logo"></div>
     <div class="canvas-wrap">
-      <canvas id="game" width="600" height="600"></canvas>
+      <canvas id="game" width="600" height="600" tabindex="1"></canvas>
 
       <div class="border">
         <div class="top-left"></div>
