add player name

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
             <input class="input" type="text" name="name" id="name">
           </div>
           <div class="row">
-            <button class="btn">
+            <button type="submit" class="btn" id="start-game-button" >
               START GAME
             </button>
           </div>
