--- a/public/index.html
+++ b/public/index.html
@@ -20,13 +20,13 @@
             <input class="input" type="text" name="name" id="name">
           </div>
           <div class="row">
-            <button type="submit" class="btn" id="start-game-button" >
+            <button type="submit" class="btn" id="start-game-button">
               START GAME
             </button>
           </div>
         </form>
       </div>
-      
+
       <canvas id="game" width="600" height="600" tabindex="1"></canvas>
 
       <div class="border">
@@ -42,7 +42,8 @@
     </div>
     <div class="chat-wrap" style="display: none">
       <div class="message"></div>
-      <div class="send">
+      <div class="online"></div>
+      <div class=" send">
         <form id="form">
           <input type="text" id="input">
           <button>
